# Kernel

./: CMakeLists.txt  Makefile  README.md  TEACHME.md  linker.ld
include/: commands.h  gdt.h  idt.h  isr.h  keyboard.h  pmm.h  stddef.h  string.h  switch_to_task.h  syscall.h  timer.h  types.h  vga.h  vmm.h
include/app/: shell_commands.h
include/app/text_editor/: piko.h
include/core/: slab.h  task.h
include/lib/: stddef.h  stdio.h  string.h
include/vfs/: vfs.h
iso_root/boot/grub/: grub.cfg
src/: asm_io.asm  boot.asm  entry.asm  gDtAsm.asm  gdt.c  idt.c  idt.h  io.h  isr.asm  isr.h  kernel.c  kernel.h  keyboard.c  keyboard.h  kheap.c  kheap.h  multiboot.h  pmm.c  pmm.h  reboot.asm  shell.c  shell.h  slab.c  stdint.h  string.c  string.h  syscall.c  system.h  task.c  task.h  task_switch.asm  timer.c  timer.h  vga.c  vga.h  vmm.c  vmm.h
src/app/: shell.c
src/app/shell_commands/: shell_commands.c
src/app/shell_commands/file_commands/: commands.c
src/app/text_editor/: piko.c
src/app/visual_graphic_application/: vga.c
src/drivers/: keyboard.c
src/iso_root/grub/: grub.cfg
src/lib/: string.c
src/syscall/: syscall.c
src/tcp_ip_stack /: tcp_ip.c
src/vfs/: vfs.c
